src/styles/base/_reset.scss
/* Box sizing */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin and padding */
* {
  margin: 0;
  padding: 0;
}

/* HTML defaults */
html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}

html,body{
  overflow-x: hidden;
   overflow: auto;
}

